compiler/testData/diagnostics/tests/valueParameterWithoutExplicitType.kt
fun foo(
    <!VALUE_PARAMETER_WITH_NO_TYPE_ANNOTATION!>x<!>
) {}